# aoc-2024

./: CMakeLists.txt  day10.cpp  day11.cpp  day12.cpp  day1_1.cpp  day2_1.cpp  day3_1.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day7_2.cpp  day8.cpp  day9.cpp  readme.txt
