cmake_minimum_required(VERSION 3.20)
project(main)

set(CMAKE_CXX_STANDARD 23)
add_executable(day1_1 day1_1.cpp)
add_executable(day2_1 day2_1.cpp)
add_executable(day3_1 day3_1.cpp)
add_executable(day4 day4.cpp)
add_executable(day5 day5.cpp)
add_executable(day6 day6.cpp)
add_executable(day7 day7.cpp)
add_executable(day7_2 day7_2.cpp)
add_executable(day8 day8.cpp)